<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">
    <WebView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/webView"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">
    </WebView>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/progressBar2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/webView"/>
    <android.support.design.widget.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@android:drawable/ic_menu_edit"
            android:id="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginBottom="8dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">
        <Button
                android:text="@string/holiday"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/holiday" android:layout_weight="1"/>
        <Button
                android:text="@string/editday"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/editday" android:layout_weight="1"/>
        <Button
                android:text="@string/registration"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/registration" android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>